modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/parser/errors/duplicate_icon.gd
@icon("res://1.png")
@icon("res://1.png")

func test():
	pass
